# Cap

./: package.json
apps/desktop/src-tauri/: Cargo.toml
apps/desktop/src-tauri/.config/: nextest.toml
apps/desktop/src-tauri/test-runner/: Cargo.toml  README.md
apps/desktop/src-tauri/test-runner/.config/: nextest.toml
apps/desktop/src-tauri/test-runner/src/: lib.rs
apps/desktop/src-tauri/test-runner/tests/: integration_tests.rs
apps/desktop/src-tauri/tests/: lib.rs
apps/desktop/src-tauri/tests/integration/: mod.rs  workflows_tests.rs
apps/desktop/src-tauri/tests/mocks/: mod.rs
apps/desktop/src-tauri/tests/unit/: clipboard_tests.rs  file_operations_tests.rs  mod.rs  recording_tests.rs  simple_clipboard_tests.rs  simple_file_tests.rs  simple_recording_tests.rs  simple_video_tests.rs  video_export_tests.rs
apps/desktop/src-tauri/tests/utils/: mod.rs
